<resources>
    <string name="app_name" translatable="false">Dietitian - DietManager</string>
    <string name="facebook_app_id" translatable="false">609822126337013</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb609822126337013</string>
    <string name="google_client_id" translatable="false">925783581218-fj27e85rq3ehv23t1bij0fs01ngtupd5.apps.googleusercontent.com</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_click_here_to">Already have an account? Click here to</string>
    <string name="sign_in">Sign In</string>
    <string name="username_or_email_id">Username or email id</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="type_a_message">Type a message</string>
    <string name="sign_up_here">SIGN UP here</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="register_this_account">"Don't have an account?"</string>
    <string name="connect_with_social">Connect with social</string>
    <string name="already_you_have_account">Already you have an account?</string>
    <string name="register_using">Register using</string>
    <string name="select_contry">Select Country</string>
    <string name="check_your_internet">Check your Internet</string>
    <string name="settings">Setting</string>
    <string name="please_enter_valid_number">Please enter valid mobile number</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="retry">Retry</string>
    <string name="server_down">Server down</string>
    <string name="no_internet_found_check_your_internet_connection">No internet found.\nCheck your internet connection or try again</string>
    <string name="enter_the_details_to_register">Enter the details to register</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="country">Country</string>
    <string name="mob_num">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_terms_privacy_policy">By continuing, you agree to the \n Terms of Service and Privacy Policy</string>
    <string name="login_terms_and_conditions_label">Terms of Service</string>
    <string name="login_privacy_policy_label">Privacy Policy</string>
    <string name="login_terms_and_conditions_url">https://www.oyola.com.au/terms-of-service-kitchens</string>
    <string name="login_privacy_policy_url">https://www.oyola.com.au/privacy-policy</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="donot_have_an_account">Don\'t have an account?</string>
    <string name="do_have_an_account">Do have an account?</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="clock_timer">00:00</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="enter_the_details_to_login">Enter the details to Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_string" />
    <string name="empty">empty</string>
    <string name="search_here">Search here</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_restaurant">Edit Kitchen</string>
    <string name="edit_bank">Edit bank</string>
    <string name="bank_account_details">Bank Details</string>
    <string name="edit_timing">Edit Timing</string>
    <string name="deliveries">Deliveries</string>
    <string name="change_password">Change Password</string>
    <string name="food_safety">Notice board</string>
    <string name="change_language">Change Language</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="ongoing">Ongoing</string>
    <string name="ongoing_order">Ongoing Orders</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_order">Upcoming Orders</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancelled_order">Cancelled Orders</string>
    <string name="past">Past</string>
    <string name="past_order">Past Orders</string>
    <string name="favorites">Favorites</string>
    <string name="email_id">Email Id</string>
    <string name="save">Save</string>
    <string name="title_activity_house_detail">HouseDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="incoming_orders">Incoming Orders</string>
    <string name="incoming_request">Upcoming Requests</string>
    <string name="delete_account">Delete Account</string>
    <string name="history">History</string>
    <string name="restaurant">Kitchen</string>
    <string name="add_ons">Add-ons</string>
    <string name="addons">Addons</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="products">Product List</string>
    <string name="dishes">Dishes</string>
    <string name="add_add_ons">Add Addons</string>
    <string name="add_ons_list">Addons List</string>
    <string name="create_add_ons">Create AddOns</string>
    <string name="add_products">Add Products</string>
    <string name="add_category">Add Category</string>
    <string name="create_category">Create Category</string>
    <string name="add_categories">Add Categories</string>
    <string name="subscribed_members">Subscribed members</string>
    <string name="subscribe_request">Subscribe requests</string>
    <string name="subscription_plans">Subscription plans</string>
    <string name="portfolio">Portfolio</string>
    <string name="revenue_order_completed">Order Completed</string>
    <string name="revenue">Revenue</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="yesterday">Yesterday</string>
    <string name="today_till_now">Today Till Now</string>
    <string name="total_last_week">Total Last Week</string>
    <string name="this_week_till_now">This Week Till Now</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="history_status">Status :</string>
    <string name="history_payment_mode">Payment Mode :</string>
    <string name="history_delivery_time">Delivery Time :</string>
    <string name="history_order_time">Order Time :</string>
    <string name="category_order">Category Order</string>
    <string name="image_upload">Image Upload</string>
    <string name="is_this_a_featured_product">Is this is a featured product?</string>
    <string name="is_this_a_selected_food_type">Is this is a selected food type?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="featured_image_upload">Featured image upload</string>
    <string name="add_product">Create Product</string>
    <string name="every_day">Everyday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="confirm">Confirm</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="is_this_a_pure_veg_restaurant">Is this a veg kitchen?</string>
    <string name="min_amount">Min Amount</string>
    <string name="offer_in_percentage">Offer In Percentage</string>
    <string name="maximum_delivery_time">Maximum Delivery Time</string>
    <string name="price">Price</string>
    <string name="order_time">Order Time</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="order_list">Order List</string>
    <string name="notes">Notes</string>
    <string name="sub_total">Sub Total</string>
    <string name="gst">Gst</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total">Total</string>
    <string name="wallet_detection">DietManager Credit applied</string>
    <string name="filter_by">Filter By</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="order_type">Order Type</string>
    <string name="order_status_all">All</string>
    <string name="order_status_completed">Completed</string>
    <string name="order_status_cancelled">Cancelled</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="calender_date">dd:MM:yyyy</string>
    <string name="country_name">Country Name</string>
    <string name="landmark">Landmark</string>
    <string name="please_enter_mail_id">Please enter mail id</string>
    <string name="please_enter_valid_mail_id">Please enter valid mail id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_user_email">Please enter user email</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="please_enter_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_minimum_length_password">Please enter atleast 6 characters in password</string>
    <string name="next">Next</string>
    <string name="shop_banner">Shop Banner Image</string>
    <string name="submit">Submit</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="select_status">Select Status</string>
    <string name="i_offer">I Offer?</string>
    <string name="takeaway">Takeaway</string>
    <string name="delivery">Delivery</string>
    <string name="select_images">Select Images</string>
    <string name="write_description">Write Description&#8230;</string>
    <string name="guide_lines">Guidelines</string>
    <string name="user_request">User Request</string>
    <string name="chef_list">Chef List</string>
    <string name="add">Add</string>
    <string name="plan_name">Plan Name</string>
    <string name="plan_description">Plan Description</string>
    <string name="no_of_days">No of days</string>
    <string name="plan_cost">Plan Cost</string>
    <string name="invite_link">Invite Link</string>
    <string name="select_auto_assign_or_manual_assign">Select Auto assign or Manual assign</string>
    <string name="auto_assign">Auto Assign</string>
    <string name="manual_assign">Manual Assign</string>
    <string name="enter_reason_here">Enter reason here</string>
</resources>