<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SubscribePlansActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_58sdp"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/plan_cost"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corner_bg"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/plan_description"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corner_bg"
                android:gravity="start"
                android:hint="@string/write_description"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:minLines="3"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/plan_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <EditText
                android:id="@+id/et_plan_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corner_bg"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textCapWords"
                android:maxLength="100"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/no_of_days"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <EditText
                android:id="@+id/et_no_of_days"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corner_bg"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semibold"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/select_auto_assign_or_manual_assign"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbAutoAssign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_assign"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_small" />

                <RadioButton
                    android:id="@+id/rbManualAssign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/manual_assign"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_small" />
            </RadioGroup>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/add"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/text_medium" />


    </LinearLayout>

</RelativeLayout>
