<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:background="@android:color/white"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center"
        android:textSize="@dimen/_13sdp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_reason"/>

    <EditText
        android:id="@+id/etReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:padding="@dimen/_6sdp"
        android:minLines="2"
        android:hint="@string/enter_reason_here"/>

    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/cancel_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/reasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="left"
            android:inputType="text"
            android:orientation="vertical"/>

    </LinearLayout>

    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/submit_reason"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>

